--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,5 +52,5 @@ body {
 }
 
 .sidebar-open{
-  @apply w-[20vw] h-[100vh] bg-white text-black p-3 overflow-hidden transition-all duration-300  sticky left-0 ;
+  @apply w-[20vw] h-[100vh] bg-white text-black p-3 overflow-hidden transition-all duration-300  absolute left-0 ;
 }
